reasoning_transformations/ClassEval/Transformations/logs/ClassEval_69.log
STARTING AT 2024-10-13 02:05:17.161028
[START] processing file: ClassEval_69
*Running tests for: ClassEval_69
...
----------------------------------------------------------------------
Ran 3 tests in 0.013s

OK

Result: ['tests_pass']
tests_pass ClassEval_69 /home/yang/Benchmark/dataset/classeval/code//ClassEval_69.py
Apply all rules on a single file.
Checking transformation add_nested_for_out
*Running tests for: ClassEval_69
...
----------------------------------------------------------------------
Ran 3 tests in 0.013s

OK

Result: ['tests_pass']
Checking transformation add_nested_list
*Running tests for: ClassEval_69
...
----------------------------------------------------------------------
Ran 3 tests in 0.013s

OK

Result: ['tests_pass']
Checking transformation transform_range_to_recursion
*Running tests for: ClassEval_69
  File "/home/yang/Benchmark/tmp_test.py", line 17
    nonlocal page
    ^^^^^^^^^^^^^
SyntaxError: no binding for nonlocal 'page' found

Result: ['error_or_timeout']
Drop transform_range_to_recursion due to ['error_or_timeout']
Checking transformation add_decorator
*Running tests for: ClassEval_69
...
----------------------------------------------------------------------
Ran 3 tests in 0.013s

OK

Result: ['tests_pass']
Checking transformation add_datetime
*Running tests for: ClassEval_69
...
----------------------------------------------------------------------
Ran 3 tests in 0.013s

OK

Result: ['tests_pass']
Checking transformation add_time
*Running tests for: ClassEval_69
...
----------------------------------------------------------------------
Ran 3 tests in 0.013s

OK

Result: ['tests_pass']
Checking transformation add_http
*Running tests for: ClassEval_69
...
----------------------------------------------------------------------
Ran 3 tests in 0.013s

OK

Result: ['tests_pass']
Checking transformation add_scipy
*Running tests for: ClassEval_69
...
----------------------------------------------------------------------
Ran 3 tests in 0.013s

OK

Result: ['tests_pass']
Checking transformation add_base64
*Running tests for: ClassEval_69
...
----------------------------------------------------------------------
Ran 3 tests in 0.013s

OK

Result: ['tests_pass']
Checking transformation add_dateutil
*Running tests for: ClassEval_69
...
----------------------------------------------------------------------
Ran 3 tests in 0.013s

OK

Result: ['tests_pass']
The file 'reasoning_transformation/ClassEval/16f2cf44d2a3ae4989e322b7529f0a8dce9b4d54/Transformation/ClassEval_69.py' has been formatted successfully.
Checking reasoning_transformation/ClassEval/16f2cf44d2a3ae4989e322b7529f0a8dce9b4d54/Transformation/ClassEval_69.py
*Running tests for: ClassEval_69
...
----------------------------------------------------------------------
Ran 3 tests in 0.013s

OK

Result: ['tests_pass']
{ 'applicable_rules': [ 'change_var_names',
                        'add_nested_for_out',
                        'add_else_to_for',
                        'add_nested_list',
                        'add_decorator',
                        'add_datetime',
                        'add_time',
                        'add_crypto',
                        'add_sklearn',
                        'add_http',
                        'add_scipy',
                        'add_base64',
                        'add_dateutil'],
  'diff_output': 'reasoning_transformation/ClassEval/16f2cf44d2a3ae4989e322b7529f0a8dce9b4d54/Transformation/ClassEval_69.patch',
  'evaluation_tests_dir': '/home/yang/Benchmark/dataset/classeval/',
  'exception': None,
  'file_id': 'ClassEval_69',
  'genetic_algorithm': None,
  'original_code': 'import PyPDF2\n'
                   '\n'
                   'class PDFHandler:\n'
                   '\n'
                   '    def __init__(self, filepaths):\n'
                   '        self.filepaths = filepaths\n'
                   '        self.readers = [PyPDF2.PdfReader(fp) for fp in '
                   'filepaths]\n'
                   '\n'
                   '    def merge_pdfs(self, output_filepath):\n'
                   '        pdf_writer = PyPDF2.PdfWriter()\n'
                   '        for reader in self.readers:\n'
                   '            for page_num in range(len(reader.pages)):\n'
                   '                page = reader.pages[page_num]\n'
                   '                pdf_writer.add_page(page)\n'
                   "        with open(output_filepath, 'wb') as out:\n"
                   '            pdf_writer.write(out)\n'
                   "        return f'Merged PDFs saved at {output_filepath}'\n"
                   '\n'
                   '    def extract_text_from_pdfs(self):\n'
                   '        pdf_texts = []\n'
                   '        for reader in self.readers:\n'
                   '            for page_num in range(len(reader.pages)):\n'
                   '                page = reader.pages[page_num]\n'
                   '                pdf_texts.append(page.extract_text())\n'
                   '        return pdf_texts',
  'patch_path': 'reasoning_transformation/ClassEval/16f2cf44d2a3ae4989e322b7529f0a8dce9b4d54/Transformation/ClassEval_69.patch',
  'single_rule': None,
  'source_file': '/home/yang/Benchmark/dataset/classeval/code//ClassEval_69.py',
  'target_file': 'reasoning_transformation/ClassEval/16f2cf44d2a3ae4989e322b7529f0a8dce9b4d54/Transformation/ClassEval_69.py',
  'test_results_after': ['tests_pass'],
  'test_results_before': ['tests_pass'],
  'total_time': 4.78502,
  'transformed_code': 'from dateutil.parser import parse\n'
                      'import base64\n'
                      'from scipy.stats import ttest_ind\n'
                      'from http.client import HTTPConnection\n'
                      'from sklearn.utils import shuffle\n'
                      'from cryptography.fernet import Fernet\n'
                      'import time\n'
                      'import datetime\n'
                      '\n'
                      'def my_decorator(func):\n'
                      '    ttest_ind([67, 11, 15], [72, 90, 99])\n'
                      '\n'
                      '    def dec_result(*args, **kwargs):\n'
                      '        res = func(*args, **kwargs)\n'
                      '        return res\n'
                      "    base64.b64encode(b'93887991054471092081')\n"
                      '    datetime.datetime.now()\n'
                      '    Fernet.generate_key()\n'
                      '    time.sleep(0.04)\n'
                      "    parse('2024-10-13 02:05:20')\n"
                      "    HTTPConnection('google.com', port=80)\n"
                      '    shuffle([82, 80, 75])\n'
                      '    return dec_result\n'
                      'import PyPDF2\n'
                      '\n'
                      'class PDFHandler:\n'
                      '\n'
                      '    @my_decorator\n'
                      '    def __init__(self, filepaths):\n'
                      '        self.filepaths = filepaths\n'
                      '        self.readers = [[PyPDF2.PdfReader(newfp_1) for '
                      'newfp_1 in filepaths]][0]\n'
                      '\n'
                      '    def merge_pdfs(self, output_filepath):\n'
                      '        pdf_writer = PyPDF2.PdfWriter()\n'
                      '        LoopChecker111 = 857\n'
                      '        LoopChecker211 = 856\n'
                      '        for LoopIndexOut in range(LoopChecker111 // '
                      'LoopChecker211):\n'
                      '            for reader in self.readers:\n'
                      '                for page_num in '
                      'range(len(reader.pages)):\n'
                      '                    page = reader.pages[page_num]\n'
                      '                    pdf_writer.add_page(page)\n'
                      '        else:\n'
                      '            pass\n'
                      "        with open(output_filepath, 'wb') as out:\n"
                      '            pdf_writer.write(out)\n'
                      "        return f'Merged PDFs saved at "
                      "{output_filepath}'\n"
                      '\n'
                      '    def extract_text_from_pdfs(self):\n'
                      '        pdf_texts = []\n'
                      '        for reader in self.readers:\n'
                      '            for page_num in range(len(reader.pages)):\n'
                      '                page = reader.pages[page_num]\n'
                      '                pdf_texts.append(page.extract_text())\n'
                      '        return pdf_texts'}
[END] processing file: ClassEval_69. Total Time: 4.78502
END AT 2024-10-13 02:05:21.947980
